bugfixing many small things from findbugs